--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,21 @@
-.walrus-showing {
-  display: none;
+#initially-hidden {
+    display: none;
+}
+
+.clickable {
+  cursor: pointer;
+  color: #0088cc;
+}
+
+.clickable:hover {
+  text-decoration: underline;
+}
+
+#initially-hidden1 {
+    display: none;
+}
+
+.clickable1 {
+  cursor: pointer;
+  color: #0088cc;
 }
